mysqladmin did not have enough space allocated for tracking all variables when using --vertical or --relative with extended-status. (Bug #40395)

This patch simply increases the buffer size and adds an assert to
  check that it is big enough -- a more comprehensive fix would dynamically
  allocate the appropriate buffers.